# aifbin-pro

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  aifbin-pro  pyproject.toml  requirements.txt  sample.md
cli/: __init__.py  aifbin_pro.py
docs/: README.md  whitepaper.html
inspector/: App.tsx  README.md  index.html  metadata.json  package-lock.json  package.json  types.ts
inspector/components/: HexViewer.tsx  PythonExporter.tsx
inspector/services/: parser.ts
legal/: COPYRIGHT_TRADEMARK.md  LICENSE_EULA.md  PRIVACY.md  REFUND_POLICY.md  TERMS.md
releases/v1.0.0/: AIF-BIN Pro-1.0.0-1.x86_64.rpm  AIF-BIN Pro_1.0.0_amd64.deb  AIF-BIN Studio-1.0.0-1.x86_64.rpm  AIF-BIN Studio_1.0.0_amd64.deb
studio/: .gitignore  AUDIT.md  RELEASE-PREP.md  index.html  package-lock.json  package.json  vite.config.ts
studio/src/: App.tsx  main.ts
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/src/: lib.rs
studio/src/lib/: ai-provider.ts  embeddings.ts  library.ts
