[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aifbin-pro"
version = "1.0.0"
description = "Professional AI memory management with semantic search. Full-featured CLI for AIF-BIN files."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Terronex", email = "terronex.dev@gmail.com"}
]
keywords = ["ai", "memory", "semantic-search", "embeddings", "aif-bin", "rag", "vector-database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.21.0",
    "msgpack>=1.0.0",
    "huggingface_hub>=0.20.0",
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "google-generativeai>=0.3.0",
    "requests>=2.28.0",
    "Pillow>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/Terronex-dev/aifbin-pro"
Documentation = "https://github.com/Terronex-dev/aifbin-pro#readme"
Repository = "https://github.com/Terronex-dev/aifbin-pro.git"
Issues = "https://github.com/Terronex-dev/aifbin-pro/issues"

[project.scripts]
aifbin-pro = "cli.aifbin_pro:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*"]
