[package]
name = "aifbin-pro"
version = "1.0.0"
description = "AIF-BIN Pro - Intelligent Document Memory System"
authors = ["Terronex.dev"]
license = "MIT"
repository = "https://github.com/terronexdev/aifbin-pro"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
dirs = "5"
